.provarCaches/00D5f000005vwGkEAI/objects/rstkf__glaydim__c.object
<CustomObject>
    <description>glaydim__c</description>
    <fields>
        <fullName>rstkf__altextid__c</fullName>
        <externalId>true</externalId>
        <label>altextid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__glaydim_glacct__r.rstkf__externalid__c &amp; &apos;_&apos; &amp; TEXT(rstkf__glaydim_glyear__r.rstkf__glyear_year__c) &amp; &apos;_&apos; &amp; TEXT(rstkf__glaydim_dimnum__c) &amp; &apos;_&apos; &amp; rstkf__glaydim_dimval__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>formula_extid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydim_dimnum__c</fullName>
        <label>Dimension Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydim_dimval__c</fullName>
        <label>Dimension Value</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydim_glacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>GL Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>glaydims</relationshipLabel>
        <relationshipName>glaydims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydim_glyear__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>GL Fiscal Year</label>
        <referenceTo>rstkf__glyear__c</referenceTo>
        <relationshipLabel>glaydims</relationshipLabel>
        <relationshipName>glaydims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydim_p00cr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Period00 Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydim_p00dr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Period00 Debit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydim_p00net__c</fullName>
        <formula>rstkf__glaydim_p00dr__c - rstkf__glaydim_p00cr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period00 Net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydim_p01cr__c</fullName>
        <label>Period01 Credit</label>
        <summarizedField>rstkf__glaydimdiv__c.rstkf__glaydimdiv_p01cr__c</summarizedField>
        <summaryForeignKey>rstkf__glaydimdiv__c.rstkf__glaydimdiv_glaydim__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydim_p01dr__c</fullName>
        <label>Period01 Debit</label>
        <summarizedField>rstkf__glaydimdiv__c.rstkf__glaydimdiv_p01dr__c</summarizedField>
        <summaryForeignKey>rstkf__glaydimdiv__c.rstkf__glaydimdiv_glaydim__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydim_p01net__c</fullName>
        <formula>rstkf__glaydim_p01dr__c - rstkf__glaydim_p01cr__c</formula>
        <label>Period01 Net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydim_p02cr__c</fullName>
        <label>Period02 Credit</label>
        <summarizedField>rstkf__glaydimdiv__c.rstkf__glaydimdiv_p02cr__c</summarizedField>
        <summaryForeignKey>rstkf__glaydimdiv__c.rstkf__glaydimdiv_glaydim__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydim_p02dr__c</fullName>
        <label>Period02 Debit</label>
        <summarizedField>rstkf__glaydimdiv__c.rstkf__glaydimdiv_p02dr__c</summarizedField>
        <summaryForeignKey>rstkf__glaydimdiv__c.rstkf__glaydimdiv_glaydim__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydim_p02net__c</fullName>
        <formula>rstkf__glaydim_p02dr__c - rstkf__glaydim_p02cr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period02 Net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>glaydim</label>
    <listViews>
        <fullName>rstkf__RS_GLAYDIM</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glaydim_glyear__c</columns>
        <columns>rstkf__glaydim_glacct__c</columns>
        <columns>rstkf__glaydim_dimnum__c</columns>
        <columns>rstkf__glaydim_dimval__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>GLAYDIM</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>glaydims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>